# arduino-base

./: .gitignore  App  ArduinoBaseSketch.ino  ArduinoSerialParser.ino  Button.h  LICENSE  README.html  README.md  Variation.ino  arduino-base.ino
.github/: pull_request_template.md
ArduinoSerialParser/: ArduinoSerialParser.ino  Averager.h  Button.h  Potentiometer.h
ArduinoSerialParser/Libraries/: Button.h  SerialParser.h
Libraries/: AnalogInput.h  Averager.h  Button.h  FixedSizeString.h  FlipflopTimer.h  LookupTable.h  Queue.h  Rfid.h  RfidProtocol.md  SerialController.h  SerialController.hpp  SerialManager.h  SerialMessenger.h  SerialParser.h  Timer.h  exception  exception.hpp  map.hpp  smm.h  string.hpp
Libraries/Rfid/: Controller.h  ID12LA.h  Reader.h  Reader.ino  RfidTag.h  protocol.md
Libraries/RfidReader/: ID12LA.h  RfidReader.ino
Libraries/src/: 00_architecture.hpp  10_map.hpp  10_string.hpp  50_SerialController.hpp  60_Switch.hpp  README.md  generate.js  generate.sh  map.hpp  smm.h
Libraries/test/: CMakeLists.txt  SerialController.cpp  exception.cpp  main.cpp  map.cpp  mock.h  string.cpp
Libraries/tests/: #RfidTests.cpp#  .#RfidTests.cpp  .#SerialControllerTests.cpp  ButtonTests.cpp  CMakeLists.txt  FakeArduino.cpp  FakeArduino.h  FakeEEPROM.h  FakeEEPROMTests.cpp  FakeSerial.cpp  FakeSerial.h  FakeSerialTests.cpp  FakeWire.h  FakeWireTests.cpp  FixedSizeStringTests.cpp  LookupTableTests.cpp  QueueTests.cpp  README.md  RfidTests.cpp  SerialControllerTests.cpp  colors.h  minunit.h  run_tests.bat  run_tests.sh  singletons.cpp  tests.cpp  tests.h
ReactSerial/: .eslintrc.js  Example.js  IPCMessages.js  SerialHOC.js  arduinoConstants.js  package.json
ReactSerial/examples/: arduino-test-page.js
cpp-lib/: ArduinoSerial.cpp  ArduinoSerial.h  arduino_util.cpp  arduino_util.h
cpp-lib/example/: example.cpp
doc/: doxyfile  doxygen_sqlite3.db
doc/html/: _averager_8h_source.html  (+41 more)
examples/: IntervalTimerExample.ino  SerialControllerExample.ino
(+64 files in other folders)
